Added contributors in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
-Plan is written by Shipeng Feng.
+Plan is written by Shipeng Feng and various contributors:
+
+See `git contributors`_ for more details.
 
 Any suggestions or contributions are welcome.
+
+.. _git contributors: https://github.com/fengsp/plan/graphs/contributors 
