Use readthedocs.org for docs hosting instead

--- a/README
+++ b/README
@@ -16,6 +16,6 @@ Plan
     -   handle communicate with your crontab process with features like write,
         update or clear
     
-    Read the docs at https://pythonhosted.org/plan/
+    Read the docs at http://plan.readthedocs.org/
 
     If you feel anything wrong, feedbacks or pull requests are welcomed.
