--- a/README
+++ b/README
@@ -18,4 +18,4 @@ Plan
     
     Read the docs at http://plan.readthedocs.org/
 
-    If you feel anything wrong, feedbacks or pull requests are welcomed.
+    If you feel anything wrong, feedbacks or pull requests are welcome.
